# mlzoomcamp2024-final-project

./: .gitignore  Dockerfile  Pipfile  README.md  app.py  hello.py  model_checkpoint.keras  predict.py  pyproject.toml
data/processed/: all_concat_football_data.csv  data_for_back_testing.csv  teams_stats_2024.csv
data/raw_data/: premier_league_2425.csv
models/: baseline_lstm_model.keras  best_model.keras  best_model.tflite  best_model_dense.keras  best_model_dense_bayes.keras  column_transformer.pkl  feature_info.npy  label_encoder.pkl  model_NN.keras  model_best.keras  model_checkpoint.keras  model_cnn.keras  model_dense.keras  model_lstm_attention.keras  model_tcn.keras
notebooks/: 01_data_gathering.ipynb  02_data_preparation.ipynb  03_eda.ipynb  04_1_train_model_naive.ipynb  04_train_model.ipynb  05_predict.ipynb  06_back_testing.ipynb  model_checkpoint.keras
scripts/: 01_data_gathering.py  02_data_preparation.py  03_data_eda.py  05_predict.py  06_back_testing_market.py  back_testing_market.py  data_gathering.py  predict.py  train_model.py
tests/: aws_test_predict.py  test_predict.py
