[project]
name = "mlzoomcamp2024-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "joblib>=1.4.2",
    "keras>=3.8.0",
    "keras-tuner>=1.4.7",
    "numpy==1.26.4",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "tensorflow==2.18.0",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.0",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
]
